# fastqc_py

./: .gitignore  README.md  hello.py  pyproject.toml
fastqc_lib/: RELEASE_NOTES.txt
fastqc_py/: help_str.py  main.py
