[project]
name = "fastqc_py"
version = "2025.4.24.0"
description = "FastQC python wrapper (Windows only, with jre)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sodatools>=2025.2.16.0",
]

[project.urls]
Repository = "https://github.com/soda92/fastqc_py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["fastqc_py", "fastqc_lib", "fastqc_jre"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["fastqc_py", "fastqc_lib", "fastqc_jre"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[tool.hatch.build.hooks.custom]

[project.scripts]
fastqc = "fastqc_py.main:main"
